--- a/downloads/rotate2.tex
+++ b/downloads/rotate2.tex
@@ -511,6 +511,69 @@
         %\draw [ultra thin, step = 0.25, lightgray, dashed] (-1.5,0) grid (1.5,1.5);
     \end{scope}
 
-    \end{tikzpicture}
+\end{tikzpicture}
 
+%%% image/rotate_ned_frame
+\tdplotsetmaincoords{70}{110}
+\begin{tikzpicture}[scale=3,line cap=round,tdplot_main_coords]
+
+    \begin{scope}[canvas is xy plane at z=0]
+        \filldraw [fill=lime!20, draw=orange, fill opacity=0.8, dashed] (0,0) -- (90:1) arc (90:270:1) -- cycle;
+        \filldraw [fill=lime!20, draw=orange, fill opacity=0.8] (0,0) -- (-90:1) arc (-90:90:1) -- cycle;
+    \end{scope}
+    \begin{scope}[canvas is yz plane at x=0]
+        \filldraw [fill=lime!20, draw=orange, fill opacity=0] (0,0) -- (0:1) arc (0:360:1) -- cycle;
+    \end{scope}
+    \begin{scope}[canvas is zx plane at y=0]
+        \filldraw [fill=lime!20, draw=orange, fill opacity=0, dashed] (0,0) -- (0:-1) arc (180:360:1) -- cycle;
+        \filldraw [fill=lime!20, draw=orange, fill opacity=0] (0,0) -- (0:1) arc (0:180:1) -- cycle;
+    \end{scope}
+    \begin{scope}[canvas is xy plane at z=1.2]
+        \draw [->, blue] (0,-0.15) arc (-90:180:0.15);
+    \end{scope}
+    \begin{scope}[canvas is yz plane at x=1.2]
+        \draw [->, blue] (0,-0.15) arc (-90:180:0.15);
+    \end{scope}
+    \begin{scope}[canvas is zx plane at y=1.2]
+        \draw [->, blue] (0,-0.15) arc (-90:180:0.15);
+    \end{scope}
+    \draw [->, orange, ultra thick] (0,0,0) -- (0,0,1.5) node[black,
+    anchor=north west] at (0, 0, 1.5) {$\vec{z}$};
+    \draw [->, orange, ultra thick] (0,0,0) -- (1.5,0,0) node[black,
+    anchor=north east] at (1.5, 0, 0) {$\vec{x}$};
+    \draw [->, orange, ultra thick] (0,0,0) -- (0,1.5,0) node[black,
+    anchor=north east] at (0,1.5, 0) {$\vec{y}$};
+
+
+    \begin{scope}[canvas is xy plane at z=0]
+        \draw [ultra thin, step = 0.25, lightgray] (-1.5, -1.5) grid (1.5,1.5);
+    \end{scope}
+
+    \begin{scope}[canvas is xy plane at z=0]
+        %\draw [ultra thin, step = 0.25, lightgray, dashed] (-1.5,0) grid (1.5,1.5);
+        \filldraw [fill=magenta!20, draw=orange, fill opacity=0.8] (0,0) -- (0:0.4) arc (0:45:0.4) -- cycle;
+        \draw [magenta, thick] (0,0) -- (45:1);
+        \node [anchor = north]      at (20:0.4) {$az$};
+    \end{scope}
+    \begin{scope}[rotate around z=45, canvas is zx plane at y=0]
+        \draw [magenta, thick] (1,0) arc (0:90:1);
+        \filldraw [fill=magenta!20, draw=orange, fill opacity=0.8] (0,0) -- (30:0.4) arc (30:90:0.4) -- cycle;
+        \node [anchor = north]      at (50:0.6) {$el$};
+    \end{scope}
+
+    \tdplotsetrotatedcoords{45}{-150}{0} % start from xyz, 1st rotate around z 45 degree, then y' (180-30) degree
+    \coordinate (Shift) at ({cos(45)*sin(30)},{sin(45)*sin(30)},{cos(30)});
+    \tdplotsetrotatedcoordsorigin{(Shift)}
+    % draw NED
+    \begin{scope}[tdplot_rotated_coords, canvas is xy plane at z=0]
+        \filldraw [fill=white, draw=cyan] (-0.25,-0.25) rectangle (0.25,0.25);
+    \end{scope}
+    \draw[ultra thick,color=cyan,tdplot_rotated_coords,->] (0,0,0) --
+    (1,0,0) node[anchor=north east]{$x^\prime$};
+    \draw[ultra thick,color=cyan,tdplot_rotated_coords,->] (0,0,0) --
+    (0,1,0) node[anchor=north]{$y^\prime$};
+    \draw[ultra thick,color=cyan,tdplot_rotated_coords,->] (0,0,0) --
+    (0,0,1) node[anchor=north west]{$z^\prime$};
+
+\end{tikzpicture}
 \end{document}
