Update rotate tutorial.

--- a/downloads/rotate2.tex
+++ b/downloads/rotate2.tex
@@ -627,6 +627,7 @@
         \draw [magenta, thick] (0,0)+(0:1 and 1.5) arc (0:90:1 and 1.5);
         \draw [magenta, thick] (0,0.05) -- (30:1 and 1.5);
         \draw [blue, thick] (30:1 and 1.5) -- (30:1.2 and 1.8);
+        \node [anchor = south west]      at (30: 1.2 and 1.8) {$A$};
         \node [anchor = north]      at (50:0.6) {$\phi$};
         \coordinate (A) at (30:1 and 1.5);
         \coordinate (B) at (30:1.2 and 1.8);
